Updated upDateMessage in MessageService and Controller, not fully successful